bookinfo-project-yamls/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: details
    name: details
    namespace: bookinfo
  spec:
    ports:
    - name: http
      port: 9080
      protocol: TCP
      targetPort: 9080
    selector:
      app: details
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: productpage
      service: productpage
    name: productpage
    namespace: bookinfo
  spec:
    ports:
    - name: http
      port: 9080
      protocol: TCP
      targetPort: 9080
    selector:
      app: productpage
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: ratings
    name: ratings
    namespace: bookinfo
  spec:
    ports:
    - name: http
      port: 9080
      protocol: TCP
      targetPort: 9080
    selector:
      app: ratings
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: reviews
      service: reviews
    name: reviews
    namespace: bookinfo
  spec:
    ports:
    - name: http
      port: 9080
      protocol: TCP
      targetPort: 9080
    selector:
      app: reviews
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
