bookinfo-project-yamls/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: bookinfo
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - bookinfo-gateway.apps.ocp4poc.example.com
    port:
      name: http
      number: 80
      protocol: HTTP
